kubernetes/local/Local-alfred-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    DeploymentName: alfred-api
  name: alfred-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      DeploymentName: alfred-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        DeploymentName:  alfred-api
    spec:
      containers:
      # API
      - image:  alfred-api:latest
        imagePullPolicy: Never
        name:  alfred-api
        livenessProbe:
          httpGet:
            path: /api/health/live
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health/ready
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 10
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    DeploymentName: alfred-api
  name: alfred-api
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    DeploymentName: alfred-api
  sessionAffinity: None
  type: LoadBalancer
