kubernetes/local/Local-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: alfred-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - host: dev.alfred
      http:
        paths:
        - path: /
          backend:
            serviceName: alfred-frontend
            servicePort: 80
        - path: /api/
          backend:
            serviceName: alfred-api
            servicePort: 80
